# build-a-llm

./: 001_prepare_data.ipynb  pyproject.toml
